examples/test/testpolicy13768.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13768
  namespace: namespace181
spec:
  podSelector:
    matchLabels:
      key9: value21
      key46: value36
      key26: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value20
          key17: value28
          key28: value15
      podSelector:
        matchLabels:
          key17: value49
          key22: value6
